hphp/test/zend/good/ext/standard/tests/general_functions/sys_getloadavg.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists("sys_getloadavg")) die("skip");
}
