hphp/test/zend/bad/ext/standard/tests/file/chroot_001.php.skipif
<?php
chdir("/");
if (!@mkdir("testtmpskipifdir")) {
	die("skip for root only");
}
rmdir("testtmpskipifdir");
if (!function_exists("chroot")) {
	die("skip chroot() not available");
}
?>